--- a/veebipood/pom.xml
+++ b/veebipood/pom.xml
@@ -82,6 +82,13 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.5</version>
 		</dependency>
+		<!-- Source: https://mvnrepository.com/artifact/com.github.vladislavgoltjajev/java-isikukood -->
+		<dependency>
+			<groupId>com.github.vladislavgoltjajev</groupId>
+			<artifactId>java-isikukood</artifactId>
+			<version>2.1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
