--- a/03_20.02-klassikomplekt/decathlon/pom.xml
+++ b/03_20.02-klassikomplekt/decathlon/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.2</version>
+		<version>4.0.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ee.maiko</groupId>
-	<artifactId>veebipood</artifactId>
+	<artifactId>decathlon</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>veebipood</name>
-	<description>OOP2026 veebipood</description>
+	<name>decathlon</name>
+	<description>OOP2026 decathlon</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -37,10 +37,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -69,24 +65,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.5</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.vladislavgoltjajev</groupId>
-			<artifactId>java-personal-code</artifactId>
-			<version>1.6</version>
-			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
